--- a/TP_IMACLIM_rendu_latex/Da_Costa_Pierre-Léandre.tex
+++ b/TP_IMACLIM_rendu_latex/Da_Costa_Pierre-Léandre.tex
@@ -354,7 +354,7 @@ Ainsi, l’interaction entre ces facteurs dans le cadre de la \textit{baseline} 
 
 \subsection{Analyse des "phases" d'évolution des intensités énergétiques et carbone}
 
-\ans{Tracez l’évolution de l’intensité carbone de l’énergie et fonction de l’évolution de l’intensité énergétique du PIB mondial. Pouvez-vous identifier plusieurs phases dans l’évolution de ces deux facteurs ? Pouvez-vous proposer une hypothèse de mécanismes expliquant ces évolutions ? Que feriez-vous pour vérifier votre hypothèse ?}
+\ans{Tracez l’évolution de l’intensité carbone de l’énergie en fonction de l’évolution de l’intensité énergétique du PIB mondial. Pouvez-vous identifier plusieurs phases dans l’évolution de ces deux facteurs ? Pouvez-vous proposer une hypothèse de mécanismes expliquant ces évolutions ? Que feriez-vous pour vérifier votre hypothèse ?}
 
 Nous représentons l’évolution de l’intensité carbone de l’énergie et fonction de l’évolution de l’intensité énergétique du PIB figure \ref{fig:intensites}. La courbe débute au point $(1,1)$, correspondant à l'année 2015 : le graphique se lit ainsi de droite à gauche. Chaque point correspond à une année ; on comprend donc que plus une zone est dense en point, moins l'évolution est rapide.
 
@@ -404,9 +404,9 @@ Pour vérifier les hypothèses soulevées sur la différentiation entre pays dé
 
 Le scénario d'atténuation correspondant à la \textit{baseline} 139 est le scénario 355 : il garantit une trajectoire des émissions telle que le seuil des 550 ppm de CO$_2$ dans l'atmosphère ne soit pas dépassé, correspondant au dépassement des 2 $\tccentigrade$ de réchauffement par rapport à l'ère préindustrielle. Les valeurs des paramètres sont les mêmes que celles de la \textit{baseline}. Dans le cadre d'une politique d'atténuation (qui peut passer par un prix du carbone, une taxe, du \textit{cap-and-trade}, des normes ou des subventions)\footnote{\url{https://www.iamcdocumentation.eu/index.php/Reference_card_-_IMACLIM-NLU}}, on s'attend ainsi à ce que :
 \begin{itemize}
-    \item les énergies fossiles soient économiquement pénalisées, poussant à l'adoption d'énergies bas-carbone malgré la disponibilité élevée des premières et le coût initial des secondes (qui peut être levé par des politiques climatiques).
+    \item les énergies fossiles soient économiquement pénalisées, poussant à l'adoption d'énergies bas-carbone malgré la disponibilité élevée des premières et le coût initial des secondes (une contrainte qui peut être levée par des politiques climatiques).
     \item la croissance soutenue de l'économie mondiale soit décarbonée, par une transition plus rapide vers des sources d'énergie moins carbonées, couplée à des comportements frugaux.
-    \item malgré la faible vitesse de gain d'efficacité énergétique, une politique publique visant à limiter les émissions peut stimuler l'efficacité auprès des agents (lorsque leur consommation carbonée est pénalisée par exemple).
+    \item malgré la faible vitesse de gain d'efficacité énergétique, une politique publique visant à limiter les émissions peut stimuler cette efficacité auprès des agents (lorsque leur consommation carbonée est pénalisée par exemple).
     \item les rigidités sur le marché du travail soient des sources potentielles de chômage si ne sont pas mises en place des politiques de reconversion des travailleurs vers des secteurs plus verts.
 \end{itemize} 
 
@@ -459,7 +459,7 @@ La figure \ref{fig:variation_PIB} permet de visualiser simultanément la traject
 
 On retrouve peu ou prou les mêmes périodes d'analyse que celles identifiées pour analyser les émissions de GES dans un cas de mitigation.
 \begin{enumerate}
-    \item 2015 - 2027 : on assiste au premier décrochage du PIB issu du scénario d'atténuation par rapport à la \textit{baseline}. La différenciation ne fait que s'accélerer sur cette période, jusqu'à présente une différence de taux de croissance moyen de 75\% en 2027 ! Il est possible que l'introduction de politiques climatiques et leur temps de déploiment impliquent de lourds impacts sur la croissance économique à travers des coûts supplémentaires sur les secteurs polluants (dans un cadre où les énergies fossiles sont pourtant abondantes), obligeant les entreprises à investir dans des technologies plus propres aux dépens d'une croissance plus facile car soutenue par les fossiles, à restructurer leur production, et à ajuster leur main-d'œuvre. 
+    \item 2015 - 2027 : on assiste au premier décrochage du PIB issu du scénario d'atténuation par rapport à la \textit{baseline}. La différenciation ne fait que s'accélerer sur cette période, jusqu'à présente une différence de taux de croissance moyen de 75\% en 2027~! Il est possible que l'introduction de politiques climatiques et leur temps de déploiment impliquent de lourds impacts sur la croissance économique à travers des coûts supplémentaires sur les secteurs polluants (dans un cadre où les énergies fossiles sont pourtant abondantes), obligeant les entreprises à investir dans des technologies plus propres aux dépens d'une croissance plus facile car soutenue par les fossiles, à restructurer leur production, et à ajuster leur main-d'œuvre. 
     \item 2027 - 2045 : les deux scénarios maintiennent une variation de PIB relativement constante, le scénario d'atténuation se maintenant à un PIB aux alentours de 11\% inférieur à la \textit{baseline}. Les technologies bas-carbone déployées et les gains d'efficacité énergétique majoritairement réalisés (donc le progrès technique) permet de maintenir une trajectoire de croissance relativement similaire à la \textit{baseline}. Néanmoins, le non-recours aux énergies fossiles (pourtant abondantes et ainsi employées dans le scénario sans politiques climatiques) ne permet pas d'atteindre le niveau de PIB de la \textit{baseline}. La perte de croissance annuelle moyenne à horizon 2045/2050 est ainsi de 42\% : par rapport à l'horizon 2030, on constate un rattrapage du taux de croissance du PIB sous le scénario d'atténuation (il était auparavant à 73\%), mais qui traduit toutefois un écart de croissance marqué par rapport à la \textit{baseline}.
     \item 2045 - 2065 : on assite au second décrochage du PIB 'atténuation', qui passe de -11\% à -18.5\% en 2065. Il est possible que l'on assiste au contrecoup des politiques climatiques. Sans elles, les pays du Nord comme les pays du Sud bâtissent encore leur forte croissance sur des énergies fossiles toujours disponibles, tendant vers une convergence mondiale de la croissance (\textit{i.e.} les pays ont tous atteint le stade de société de consommation, et l'absence de fonction de dommages climatiques dans le modèle ne pénalise pas une croissance soutenue et très carbonée). Au contraire, leur application dans un monde économique peu flexible peut entraîner à terme des pertes de croissance importantes, surtout si la majorité des bénéfices de cette transition énergétiques ont déjà été récoltés (les effets des gain d'efficacité et du progrès technique se manifestent principalement sur la période 2027-2045, avant d'atteindre un plateau par la suite). On note toutefois que sur cette période, la perte de croissance annuelle moyenne est comprise entre 40\% et 50\%. Cet intervalle de valeur, proche de celle de la période précédente, traduit une certaine stabilité de l'écart du taux de croissance moyen entre les deux scénarios, et signifie probablement que le décrochage principal du PIB sous scénario d'atténuation a eu lieu avant 2027.
 \end{enumerate}
@@ -479,11 +479,11 @@ On retrouve peu ou prou les mêmes périodes d'analyse que celles identifiées p
 
 \ans{Calculez les émissions cumulées sur la période 2015-2065 dans les scénarios, et la croissance annuelle moyenne sur 2015-2065 dans les scénarios. Placez les scénarios de baseline dans l’espace « émissions cumulées vs croissance annuelle moyenne », \textit{i.e.} chaque scénario est un point avec pour l’axe des abscisses la croissance annuelle moyenne et pour l’axe des ordonnées les émissions cumulées.}
 
-La figure \ref{fig:baselines_scenarios} présente l'ensemble des scénarios de \textit{baseline} selon leurs émissions cumulées entre 2015 et 2065 et leur taux de croissance annuelle moyen. On remarque une forte dispersion entre les \textit{baselines} possibles ; notamment, une grande majorité du spectre [2800~:~4000 GtCO$_2$ ; 1.75~:~3\%] est couvert. Notons que pour rester en-dessous de 2 $\tccentigrade$ de réchauffement avec une probabilité de 66\%, il faudrait que les émissions cumulées entre 2015 et 2100 ne dépassent pas 1200 GtCO$_2$ \footnote{Friedlingstein, P., Andrew, R., Rogelj, J. et al. Persistent growth of CO2 emissions and implications for reaching climate targets. Nature Geosci 7, 709–715 (2014). \url{https://doi.org/10.1038/ngeo2248}}. Aucun scénario de \textit{baseline} ne permet cela.
+La figure \ref{fig:baselines_scenarios} présente l'ensemble des scénarios de \textit{baseline} selon leurs émissions cumulées entre 2015 et 2065 et leur taux de croissance annuelle moyen. On remarque une forte dispersion entre les \textit{baselines} possibles ; notamment, une grande majorité du spectre \{[2800,~4000] GtCO$_2$ ; [1.75,~3]\%\} est couvert. Notons que pour rester en-dessous de 2 $\tccentigrade$ de réchauffement avec une probabilité de 66\%, il faudrait que les émissions cumulées entre 2015 et 2100 ne dépassent pas 1200 GtCO$_2$\footnote{Friedlingstein, P., Andrew, R., Rogelj, J. et al. Persistent growth of CO2 emissions and implications for reaching climate targets. Nature Geosci 7, 709–715 (2014). \url{https://doi.org/10.1038/ngeo2248}}. Aucun scénario de \textit{baseline} ne permet cela.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{images_IMACLIM/baselines_scenarios.png}
+    \includegraphics[width=0.9\textwidth]{images_IMACLIM/baselines_scenarios.png}
     \caption{Ensemble des scénarios de \textit{baseline} représentés par leurs émissions cumulées et leur croissance annuelle moyenne.}
     \label{fig:baselines_scenarios}
 \end{figure}
@@ -495,193 +495,63 @@ moyennes dans les scénarios de baseline et d’atténuation. Commentez.}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{images_IMACLIM/histo_growth.png}
-    \caption{Taux de croissance annuelle moyen selon le type de scénario.}
+    \includegraphics[width=0.9\textwidth]{images_IMACLIM/histo_growth.png}
+    \caption{Représentation en histogrammes et en \textit{boxplots} du taux de croissance annuelle moyen selon le type de scénario.}
     \label{histo_growth}
 \end{figure}
+
+À partir de la figure \ref{histo_growth}, nous remarquons que : 
+\begin{itemize}
+    \item La distribution des taux de croissance annuelle moyens des scénarios d'atténuation est décalée sur la gauche par rapport à celle de la \textit{baseline}, quoique les histogrammes se chevauchent tout de même. Cela semble traduire une tendance générale à une croissance plus faible dans les scénarios d'atténuation, affectée par les politiques climatiques. Soulignons néanmoins encore une fois que le modèle IMACLIM-R ne prend pas en compte les bénéfices de la mitigation sur la croissance économiques, qu'ils soient directs (moins de dégradation sur le capital par les évènements climatiques extrêmes) ou indirects (effets sur la santé, etc.)
+    \item Chaque distribution voit sa moyenne et sa médiane (quasi-)confondues, et l'écart interquartile est similaire entre les distributions : les scénarios ont donc été construits de manière relativement symétrique.
+    \item Le taux de croissance annuel moyen le plus faible reste supérieur à 1\% dans les deux cas : aucun scénario de décroissance économique n'advient.
+\end{itemize}
 
 
 \subsection{Anova}
 \ans{Choisissez une variable de sortie, soit les émissions soit la croissance, dans un sous-ensemble des scénarios, soit les baselines soit les scénarios d’atténuation. Construisez l’analyse de la variance, anova, de cette variable dans ce sous-ensemble des scénarios afin d’analyser les contributions des différents groupes de paramètres à la variance du résultat. Vous pourrez demander un exemple de code qui construit des anova. Commentez.}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=\textwidth]{images_IMACLIM/anova_baseline.png}
+        \caption{ANOVA sur le PIB/habitant - \\
+        baselines.}
+        \label{fig:anova_baseline}
+\end{figure}
 
-\begin{comment}
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=\textwidth]{images_IMACLIM/anova_mitigation.png}
+        \caption{ANOVA sur le PIB/habitant - \\
+        scénarios d'atténuation.}
+        \label{fig:anova_mitigation}
+\end{figure}
 
-\begin{quiz}{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Nous choisissons de performer une décomposition de la variance par ANOVA sur le PIB/habitant, pour les scénarios de \textit{baseline} d'une part (voir fig. \ref{fig:anova_baseline}) et les scénarios d'atténuation d'autre part (fig. \ref{fig:anova_mitigation}), afin de clairement identifier les variations des contributions des différents groupes de paramètres à la variance du résultat. Les effets d'interactions ont été exclus car leur pouvoir explicatif était infime. Soulignons d'ores et déjà le très faible pouvoir explicatif des rigidités de marché (pourtant élevées dans notre configuration), et que nous exclurons donc de notre analyse.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{multi}[%
-    % - Retroalimentación
-    feedback={La respuesta correcta es}
-    ]%
-    % - Indentificador
-    {Analyse d’une « baseline »}
-    % - Enunciado
-    
-    Puis utilisez les commandes suivantes pour lire les données (votre fichier .py doit être dans le dossier en amont du dossier \texttt{data/}, où bien spécifiez le chemin).
-    
-\end{multi}
+On retrouve alors des phases d'évolution identifiées précedemment, et les graphiques viennent appuyer certaines hypothèses ou au contraire en infirmer d'autres. 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{numerical}[tolerance=0.1,%
-    % - Retroalimentación
-    feedback={La suma es igual a $2$.}
-    ]%
-    % - Indentificador
-    {Pregunta-02}
-    % - Enunciado
-    El resultado de $1+1$ es:
-    \item 2
-\end{numerical}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{shortanswer}[%
-    % - Retroalimentación
-    feedback={El dominio de la relación es $\{a,c,d\}$}
-    ]%
-    % - Indentificador
-    {Pregunta-03}
-    % - Enunciado
-    Considere la relación $\{(a,b), (a,c), (d,c), (c,c)\}$, el dominio de la relación es (colocar los elementos separados por comas, en orden alfabético y sin espacios):
-    \item a,c,d
-\end{shortanswer}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{multi}[]%
-    % - Indentificador
-    {Pregunta-06}
-    % - Enunciado
-    Esta pregunta está hecha para probar algunos caracteres especiales. ¿Pongamos una tabla?
-    \[
-        \begin{array}{c|c}
-            1 & 2 \\\hline
-            3 & 4
-        \end{array}
-    \]
-    y una \textit{aligned}:
-    \[
-        \begin{aligned}
-            a & = b\\
-            \lim_{x\to0 }f(x) & = b
-        \end{aligned}
-    \]
-    También incluyamos estos signos (se debe usar $\backslash($ y $\backslash)$): \(2>1\) y \(1<2\). En modo desplegado no hay problema:
-    \[
-        2>1 \ansad\text{y}\ansad 1<2. 
-    \]
-    Finalmente, para operadores definidos por el usuario, se tiene problemas
-    un $\text{sen}(x)$
-    y 
-    un $\text{dom}(F)$.
-    \item $(0,1)$
-    \item $(0,1)$
-    \item* $(0,0)$
-\end{multi}
-
-\end{quiz}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{quiz}{Tipos de pregunta}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{multi}[]%
-    % - Indentificador
-    {multi}
-    % - Enunciado
-    Which numbers are prime? 
-    \item* 2 
-    \item* 5 
-    \item* 7 
-    \item 1 
-    \item 6 
-\end{multi}
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{numerical}[tolerance=0.01]%
-    % - Indentificador
-    {numerical} 
-    % - Enunciado
-    Approximate value of $\sqrt{2}$? 
-    \item[tolerance={1e-1}] 1.4142
-    % \item[fraction=20,feedback={twice this!}] 7.0711e-1 
-    % \item[fraction=0,feedback={Wrong!}] * 
-\end{numerical}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{shortanswer}%
-    % - Indentificador
-    {shortanswer}
-    % - Enunciado
-    Newton's rival was Gottfried Wilhelm \blank. 
-    \item Leibniz 
-    \item Leibniz. 
-\end{shortanswer}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{shortanswer}[usecase]%
-    % - Indentificador
-    {shortanswer}
-    % - Enunciado
-    What was Newton's first name? 
-    \item Isaac 
-    \item[fraction=0,feedback={Simply Isaac!}] Isaa* 
-    \item[fraction=0,feedback={This one is Leibniz!}] *Gottfried* 
-    \item[fraction=0,feedback={First name, not title!}] Sir* 
-    \item[fraction=0,feedback={No\dots}] * 
-\end{shortanswer}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{essay}[]%
-    % - Indentificador
-    {essay} 
-    % - Enunciado
-    Enunciado
-    \item information 1 for grader 
-\end{essay}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{matching}[]%
-    % - Indentificador
-    {matching} 
-    % - Enunciado
-    Enunciado
-    \item Primero \answer 1
-    \item Segundo \answer 2
-    \item Tercero \answer 3
-\end{matching}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{cloze}%
-    % - Indentificador
-    {cloze} 
-    % - Enunciado
-    Thanks to calculus, invented by Isaac 
-    \begin{shortanswer}[usecase] 
-        \item Newton 
-    \end{shortanswer}, 
-    we know that the derivative of $x^2$ is 
-    \begin{multi}[] 
-        \item $2x$ 
-        \item* $\frac{1}{3} x^3 + C$ 
-        \item $0$ 
-    \end{multi}
-    and that $\int_0^2 x^2\,dx$ equals 
-    \begin{numerical} 
-        \item[tolerance={4e-4}] 2.667 
-    \end{numerical}. 
-    Thanks, Isaac! 
-\end{cloze}
-
-
-\end{quiz}
-
-\end{comment}
-
+\begin{enumerate}
+    \item 2015 - 2020 : 
+    \begin{itemize}
+        \item Dans le scénario sans politiques climatiques, l'accroissement de productivité de l'ensemble des pays, notamment des pays émergents est un des principaux facteurs influançant la croissance économique. Le PIB/habitant est aussi fortement sensible aux hypothèses sur le développement des technologies bas-carbone, de tel sorte à ce que le progrès technique en technologies bas-carbone et la croissance de la productivité expliquent 60\% de la variance du PIB par habitant. De manière contre-intuitive, le recours aux énergies fossiles est un paramètre peu explicatif de la croissance économique. Considérant que le choix de développer ou non des technologies bas-carbone peut avoir un impact sur la productivité\footnote{Henriet, F., Maggiar, N. and Schubert, K. (2014), A Stylized Applied Energy-Economy Model for France, The Energy Journal, 35(4).}, on suppose que les choix de productions déterminent majoritairement les trajectoires de croissance sur cette courte période.
+        \item Lorsqu'une contrainte de 550 ppm est instaurée, la répartition des moteurs clés de la croissance change drastiquement. L'arrêt des énergies fossiles advient dès 2018 et le rattrapage de productivité ne peut se construire sur les fossiles. Au contraire, les comportements de demande en énergie et l'efficacité énergétique expliquent 60\% de la variance du PIB : c'est donc les choix de sobriété et d'optimisation qui sous-tendent les chemins possibles de croissance.
+    \end{itemize}
+    Notons aussi la prégnance du résidu sur cette période, qui s'explique simplement par la phase de "calibration" du modèle. Les mécanismes de croissance endogène ne permettent pas une estimation robuste lors des premières itérations.
+    \item 2020 - 2027 : 
+    \begin{itemize}
+        \item \textit{Baseline} : on assiste à une transfert entre les technologies bas-carbone, qui perdent drastiquement en importance, et les comportements frugaux des agents, qui viennent expliquer plus de 30\% de la variance du PIB : la demande influence la croissance. Les autres facteurs restent globalement constant, quoiqu'on assiste à une légère diminution de la part de la productivité. 
+        \item Atténuation : dans ce scénario, le transfert se fait dans l'autre sens, et on voit la part de l'efficacité énergétique croître fortement. Supposant que le travail investi dans le développement des technologies bas-carbone fait perdre en croissance car il ne permet pas de gains de productivité du travail\footnote{\textit{ibid.}}, on peut soulever l'hypothèse de trajectoires de croissance dirigées par les paramètres régissant l'application des politiques climatiques et le déploiement des technologies bas-carbone (par exemple, les politiques de taxe carbone peuvent entraîner un choc négatif sur la demande d'énergie si le coût de l'énergie est élevé et/ou un choc positif sur l'innovation si des politiques de taxe carbone ont été mises en œuvre\footnote{Fried, Stephie. 2018. "Climate Policy and Innovation: A Quantitative Macroeconomic Analysis." American Economic Journal: Macroeconomics, 10 (1): 90–118. DOI: \url{10.1257/mac.20150289}}).
+    \end{itemize}
+    \item 2027 - 2045 :
+    \begin{itemize}
+        \item \textit{Baseline} : On assiste à un léger regain des énergies fossiles et de la croissance des USA dans la part de variance totale expliquée. Les énergies renouvelables ne sont pas impérativement nécessaires dans un monde sans politiques d'atténuation et où les énergies fossiles sont abondantes, or, il est probable que la productivité soit plus élevée lorsqu'elle est soutenue par des énergies fossiles : le niveau de consommation de ces dernières influence les trajectoires de croissance. Sur cette même période, les gains d'efficacité énergétiques expliquent jusqu'à 30\% de la variance du PIB/habitant. De forts gains énergétiques permettent de produire autant avec moins d'énergie, \textit{i.e.} de produire plus avec autant d'énergie. On en déduit finalement que les trajectoires de croissance sont déterminées par l'efficacité de la production. Le rôle de la demande énergétique reste importante.
+        \item Scénario d'atténuation : Comme pour la \textit{baseline}, les comportements de consommation d'énergie voient leur pouvoir explicatif légèrement diminuer, passant à $\sim$ 20\% de la variance. La valeur du PIB/habitant dépend très majoritairement (70\% de la variance) des trajectoires d'amélioration des intensités énergétiques et carbone (gains d'efficacité énergétique et déploiement des énergies bas-carbone). On peut supposer qu'à la fin de cette période, les pays du Sud ont pu adopter les technologies bas-carbone dans la majorité des scénarios (d'où la diminution de pouvoir explicatif, $\sim$ 20\% en 2045 contre 50\% en 2027), et les trajectoires de gains d'efficacité énergétique (qui permettent de croître à quantité d'énergie donné) déterminent majoritairement le niveau de croissance (afin qu'elle soit compatible avec les limites d'émissions).
+    \end{itemize}
+    \item 2045 - 2065 :
+    \begin{itemize}
+        \item \textit{baseline} : La part de la productivité des USA et de l'efficacité énergétique croît dans l'explication de la variance, aux dépens de la demande en énergie des consommateurs. On poursuit globalement la tendance étudiée sur la période précédente.
+        \item Scénario d'atténuation : similairement au cas sans politiques climatiques, la croissance de la productivité totale (celle des USA et celle des autres pays, qui converge vers le \textit{leader}) et l'efficacité énergétique dominent l'explication du PIB/habitant. Soulevons l'hypothèse que 30 ans après le début de la simulation, les progrès sur l'intensité carbone par le déploiement des technologies associées ont été menés sur l'ensemble des scénarios afin de contrôler la baisse des émissions. Les trajectoires de croissance sont alors fortement dépendantes des gains d'efficacité énergétique et des gains de productivité (notamment du travail).
+    \end{itemize}
+\end{enumerate}
 \end{document}
